# MOTIONGUARD

ENTORNOSINTELIGENTES/ENTORNOSINTELIGENTES/: CMakeLists.txt  Doxyfile
ENTORNOSINTELIGENTES/ENTORNOSINTELIGENTES/main/: CMakeLists.txt  app_config.h  app_types.h  control.c  control.h  estados.h  main.c  main.txt  max30100.c  max30100.h  max30100.txt  mlx90614.c  mlx90614.h  sistema.c  sistema.h  tareas.txt  tareash.txt
Entrega_Embebidos/: datos.txt
Entrega_Embebidos/NODOMPU6050/: CMakeLists.txt
Entrega_Embebidos/NODOMPU6050/main/: CMakeLists.txt  config.h  espnow_comm.c  espnow_comm.h  main.c  mpu6050.c  mpu6050.h
Entrega_Embebidos/NODOSP32TOUCH/: datos.txt  platformio.ini
Entrega_Embebidos/NODOSP32TOUCH/src/: DEV_Config.cpp  GUI_Paint.cpp  LCD_Test.h  config.h  lcd.cpp  lcd.h  main.cpp  sd_card.cpp  sd_card.h  sensor.cpp  (+5 more)
Entrega_Embebidos/Nodo_Sensor_Ritmo_Cardiaco/: CMakeLists.txt
Entrega_Embebidos/Nodo_Sensor_Ritmo_Cardiaco/Nodo_Sensor_Ritmo_Cardiaco/main/: CMakeLists.txt  config.h  sensor_task.c  sensor_task.h  state_machine.h
FSM_TASK/: diagram.json  platformio.ini  wokwi.toml
FSM_TASK/src/: StateMachineConfig.cpp  StateMachineConfig.h  Tasks.cpp  Tasks.h  main.cpp
cardiaco_embebidos/: platformio.ini
cardiaco_embebidos/src/: intento1.txt  intento2.txt  intento3_sincro.txt  intento4_comunicacion.txt  sensor_cardiaco.cpp  voltaje.txt
sensor_cardiaco/: platformio.ini
sensor_cardiaco/src/: intento1.txt  intento2_complete.txt  intento3_sincro.txt  intento4_comunication.cpp  main.txt  medidor.txt  medidorLarri.txt  obtener_mac.txt  prueba.txr
(+731 files in other folders)
