idf_component_register(
    SRCS 
        "main.c"
        "config.c"
        "adc_module.c"
        "espnow_module.c"
        "sensor_task.c"
        "report_task.c"
        "state_machine.c"
    INCLUDE_DIRS "."
    REQUIRES 
        esp_wifi 
        esp_event 
        nvs_flash 
        esp_driver_gpio
        esp_adc
        cjson
        esp_timer
)